added Number component, colors variables

--- a/src/components/FormWrapper/FormWrapper.sass
+++ b/src/components/FormWrapper/FormWrapper.sass
@@ -1,2 +1,9 @@
-FormBackground 
+@import './../../_colors.sass'
+
+.FormBackground 
+   max-width: 500px
+   width: 60%
+   min-height: 400px
+   margin: 40px auto
+   background-color: $primary-color
    
