Added input to FormWrapper and added sass too its sass file, added function to get object/s in array after user adds several numbers divided by comma

--- a/src/_colors.sass
+++ b/src/_colors.sass
@@ -1,4 +1,5 @@
-$primary-color: #8BC34A
-$secondary-color: #2980b9
+$primary-color: #27ae60
+$secondary-color: #2c3e50
+$sec-col-half-opacity: rgba(41,128,185,0.5)
 
 $font-stack: 'Montserrat', sans-serif
