implemented map method in post request, added text area for messages

--- a/src/components/FormWrapper/InputElements/Number/Number.sass
+++ b/src/components/FormWrapper/InputElements/Number/Number.sass
@@ -1,4 +1,4 @@
-@import './../../../_colors.sass'
+@import './../../../../_colors.sass'
 .PhoneNumber 
    font-family: $font-stack
    font-size: 10pt
