added Button component and basic styling

--- a/src/components/FormWrapper/InputElements/Number/Number.sass
+++ b/src/components/FormWrapper/InputElements/Number/Number.sass
@@ -3,9 +3,9 @@
    font-family: $font-stack
    font-size: 10pt
    font-weight: bold
-   width: 40%
+   width: 50%
    height: 30px
-   margin: 0 auto
+   margin: auto
    padding: 6px
    border: none
    border-radius: 6px
@@ -14,7 +14,7 @@
    
 .PhoneNumber:hover,
 .PhoneNumber:focus
+      width: 70%
       background-color: $secondary-color
       color: white
       box-shadow: 1px 1px 6px $secondary-color
-      width: 60%
