--- a/src/components/FormWrapper/FormWrapper.sass
+++ b/src/components/FormWrapper/FormWrapper.sass
@@ -12,11 +12,18 @@
    border-radius: 6px
    box-shadow: 1px 1px 10px $sec-col-half-opacity
 
+   h2
+      color: $secondary-color
+      text-align: center
+
 @media (max-width: 500px) 
    .FormBackground 
       width: 100%
       margin: 0
       border-radius: 0
       height: 100vh
+      box-shadow: 1px 1px 6px $secondary-color
+
+
       
    
