advanced styling and responsivity

--- a/src/components/FormWrapper/InputElements/TextArea/TextArea.sass
+++ b/src/components/FormWrapper/InputElements/TextArea/TextArea.sass
@@ -19,3 +19,11 @@
    background-color: $secondary-color
    box-shadow: 1px 1px 6px $secondary-color
    color: white
+
+@media (max-width: 500px)
+   .Message
+      height: 150px
+
+   .Message:hover,
+   .Message:focus
+      height: 170px
