--- a/src/components/FormWrapper/FormWrapper.sass
+++ b/src/components/FormWrapper/FormWrapper.sass
@@ -1,13 +1,15 @@
 @import './../../_colors.sass'
 
 .FormBackground
+   position: relative
+   top: 40px
    display: flex
    flex-direction: column
    flex-flow: column
    max-width: 500px
    width: 60%
    min-height: 400px
-   margin: 40px auto
+   margin: auto
    background-color: $primary-color
    border-radius: 6px
    box-shadow: 1px 1px 10px $sec-col-half-opacity
@@ -19,10 +21,14 @@
 @media (max-width: 500px) 
    .FormBackground 
       width: 100%
-      margin: 0
+      top: 0
       border-radius: 0
       height: 100vh
       box-shadow: 1px 1px 6px $secondary-color
+      background-color: transparentize(#fff, 1)
+
+      h2
+         color: $primary-color
 
 
       
