--- a/src/components/FormWrapper/InputElements/Button/Button.sass
+++ b/src/components/FormWrapper/InputElements/Button/Button.sass
@@ -10,9 +10,12 @@
    border-radius: 6px
    cursor: pointer
    transition: ease-in 0.3s all
+   outline: none
+
 
 .Button:hover,
 .Button:focus
    background-color: $secondary-color
    color: white 
    box-shadow: 1px 1px 6px $secondary-color
+   outline: none
