made major changes in styling and colors

--- a/src/_colors.sass
+++ b/src/_colors.sass
@@ -1,5 +1,6 @@
-$primary-color: #26A69A
+$primary-color: #aed581 
 $secondary-color: #2c3e50
+$bg-color: #26A69A
 $sec-col-half-opacity: rgba(41,128,185,0.5)
 
 $font-stack: 'Montserrat', sans-serif
