--- a/src/components/FormWrapper/InputElements/Button/Button.sass
+++ b/src/components/FormWrapper/InputElements/Button/Button.sass
@@ -2,10 +2,11 @@
 
 .Button
    font-weight: bold
+   font-size: 12pt
    color: $secondary-color
    width: 70px
    margin: auto
-   padding: 6px
+   padding: 10px
    border: 0
    border-radius: 6px
    cursor: pointer
