--- a/src/components/FormWrapper/InputElements/Device/Device.sass
+++ b/src/components/FormWrapper/InputElements/Device/Device.sass
@@ -8,7 +8,7 @@
    transition: ease-in 0.3s all
 
 h3
-   color: $primary-color
+   color: $secondary-color
    margin: auto
    text-align: center
 
@@ -19,3 +19,7 @@ h3
    color: white 
    box-shadow: 1px 1px 6px $secondary-color
    outline: none
+
+@media (max-width: 500px) 
+   h3
+      color: $primary-color
