--- a/src/components/FormWrapper/FormWrapper.sass
+++ b/src/components/FormWrapper/FormWrapper.sass
@@ -10,7 +10,7 @@
    width: 60%
    min-height: 400px
    margin: auto
-   background-color: $primary-color
+   background-color: $bg-color
    border-radius: 6px
    box-shadow: 1px 1px 10px $sec-col-half-opacity
 
@@ -25,7 +25,7 @@
       border-radius: 0
       height: 100vh
       box-shadow: 1px 1px 6px $secondary-color
-      background-color: transparentize(#fff, 1)
+      background-color: transparentize(#fff, 0.85)
 
       h2
          color: $primary-color
